# CI-2023

./: .gitignore  README.md
lab1/: lab1-set_coverage.ipynb  pyproject.toml  pyvenv.cfg
lab10/: README.md  lab10.ipynb  policy_100kgames_p1  policy_100kgames_p2  policy_200kgames_p1  policy_200kgames_p2  policy_player1  policy_player2
lab2/: README.md  lab2-misere.ipynb  lab2-nim-ea.ipynb  lab2-nim.ipynb  pyvenv.cfg
lab2/data/opt_vs_opt/: k=10.npy  k=11.npy  k=12.npy  k=13.npy  k=14.npy  k=15.npy  k=16.npy  k=17.npy  k=2.npy  k=3.npy  k=4.npy  k=5.npy  k=6.npy  k=7.npy  k=8.npy  k=9.npy
lab2/data/opt_vs_opt_advanced/: k=12.npy  k=14.npy  k=16.npy  k=19.npy  k=2.npy  k=3.npy  k=4.npy  k=5.npy  k=6.npy  k=8.npy
lab3/: README.md  lab9.ipynb
lab9/: README.md  lab9.ipynb  pyvenv.cfg
quixo/: README.md  game.py  main.py  model.py  requirements.txt
quixo/policies/: policy_rl_player  policy_rl_player1  policy_rl_player1_advance  policy_rl_player2  policy_rl_player2_advance  policy_rl_player2_lr05
quixo/src/: game.py  main.py  model.py  player.py  rl_analysis.py
quixo/src_old/: game.py  main.py
set_coverage/: pyproject.toml  pyvenv.cfg  set_coverage.ipynb
set_coverage_v2/: pyproject.toml  pyvenv.cfg  set_coverage_astar.ipynb  set_coverage_greedy.ipynb  set_coverage_v2.ipynb
